Css fixes - alignment with uswds components

--- a/src/stylesheets/components/_accordion.scss
+++ b/src/stylesheets/components/_accordion.scss
@@ -1,5 +1,4 @@
-.usa-accordion{
-&--bordered  {
+.usa-accordion {
   @include u-padding-x(1);
   .usa-accordion__button {
     @include u-bg('white');
@@ -8,6 +7,7 @@
     @include u-padding-y(2);
     @include u-text('semibold');
     @include u-position('relative');
+    font-size: 1.06em;
     background-image: none;
 
     &:hover {
@@ -27,10 +27,11 @@
       top: 0.8rem;
       width: 25px;
       height: 25px;
-      background: linear-gradient(#0a3466,#0a3466);
+      background: linear-gradient(#0a3466,#0a3466) #e2e2e2;;
       background-position: center;
       background-size: 54% 1px;
       background-repeat: no-repeat;
+      border-radius: 50%;
     }
 
     &[aria-expanded=true] {
@@ -52,31 +53,41 @@
         top: 0.8rem;
         width: 25px;
         height: 25px;
-        background: linear-gradient(#0a3466,#0a3466),#e2e2e2;
+        background: linear-gradient(#0a3466,#0a3466);
         background-position: center;
         background-size: 1px 54%;
         background-repeat: no-repeat;
         border-radius: 50%;
+        z-index: 1;
       }
     }
   }
 }
-}
 
-.usa-accordion.usa-accordion--bordered{
+.usa-accordion {
   .usa-accordion__heading {
     @include u-margin-top(0);
   }
+
+  .usa-accordion__heading:first-of-type {
+    .usa-accordion__button {
+      @include u-border-top(1px);
+    }
+  }
+
   .usa-accordion__button {
     @include u-border-x(1px);
     @include u-border-bottom(1px);
     @include u-border('base-light');
-
-    &[aria-expanded=true] {
-      @include u-border-bottom(0);
-    }
   }
 
+  .usa-accordion__content:not([display=none]) {
+    @include u-border-bottom(1px);
+    border-color: color('base-light');
+  }
+}
+
+.usa-accordion--bordered {
   .usa-accordion__content {
     @include u-border(1px);
     @include u-border('base-light');
